crates/thread_aware_macros_impl/tests/snapshots/derive__relocated_and_phantom_param_gets_both_obligations.snap
---
source: crates/thread_aware_macros_impl/tests/derive.rs
expression: expand(input)
---
impl<'a, T: 'a + ::thread_aware::ThreadAware> ::thread_aware::ThreadAware
for RelocatedAndPhantom<'a, T>
where
    RelocatedAndPhantom<'a, T>: ::core::marker::Send,
{
    fn relocate(
        &mut self,
        source: Option<::thread_aware::affinity::Affinity>,
        destination: ::thread_aware::affinity::Affinity,
    ) {
        ::thread_aware::ThreadAware::relocate(&mut self.0, source, destination);
    }
}
