crates/thread_aware_macros_impl/tests/snapshots/derive__skipped_generic_field_gets_self_send_predicate.snap
---
source: crates/thread_aware_macros_impl/tests/derive.rs
expression: expand(input)
---
impl<T> ::thread_aware::ThreadAware for SkippedGeneric<T>
where
    SkippedGeneric<T>: ::core::marker::Send,
{
    fn relocate(
        &mut self,
        source: Option<::thread_aware::affinity::Affinity>,
        destination: ::thread_aware::affinity::Affinity,
    ) {}
}
